--- a/src/templates/editar_movimentacao.html
+++ b/src/templates/editar_movimentacao.html
@@ -118,6 +118,7 @@
     <option value="emprestimo" {% if movimentacao.motivo == 'emprestimo' %}selected{% endif %}>Empréstimo</option>
     <option value="teste" {% if movimentacao.motivo == 'teste' %}selected{% endif %}>Teste</option>
     <option value="instalação" {% if movimentacao.motivo == 'instalação' %}selected{% endif %}>Instalação</option>
+    <option value="montagem" {% if movimentacao.motivo == 'montagem' %}selected{% endif %}>Montagem</option>
   </select><br>
 
   <label>Observação:</label>
