--- a/src/templates/nova_movimentacao.html
+++ b/src/templates/nova_movimentacao.html
@@ -97,6 +97,7 @@
     <option value="emprestimo">Empréstimo</option>
     <option value="teste">Teste</option>
     <option value="instalação">Instalação</option>
+    <option value="montagem">Montagem</option>
   </select><br>
 
   <label>Observação:</label>
