Add: Feira em motivo

--- a/src/templates/editar_movimentacao.html
+++ b/src/templates/editar_movimentacao.html
@@ -116,6 +116,7 @@
     <option value="">-- Selecione --</option>
     <option value="manutenção" {% if movimentacao.motivo == 'manutenção' %}selected{% endif %}>Manutenção</option>
     <option value="emprestimo" {% if movimentacao.motivo == 'emprestimo' %}selected{% endif %}>Empréstimo</option>
+    <option value="feira" {% if movimentacao.motivo == 'feira' %}selected{% endif %}>Feira/Cadastramento</option>
     <option value="teste" {% if movimentacao.motivo == 'teste' %}selected{% endif %}>Teste</option>
     <option value="instalação" {% if movimentacao.motivo == 'instalação' %}selected{% endif %}>Instalação</option>
     <option value="montagem" {% if movimentacao.motivo == 'montagem' %}selected{% endif %}>Montagem</option>
