--- a/src/templates/nova_movimentacao.html
+++ b/src/templates/nova_movimentacao.html
@@ -95,6 +95,7 @@
     <option value="">-- Selecione --</option>
     <option value="manutenção">Manutenção</option>
     <option value="emprestimo">Empréstimo</option>
+    <option value="feira">Feira/Cadastramento</option>
     <option value="teste">Teste</option>
     <option value="instalação">Instalação</option>
     <option value="montagem">Montagem</option>
