--- a/src/templates/editar_material.html
+++ b/src/templates/editar_material.html
@@ -13,6 +13,9 @@
     <label for="quantidade">Quantidade:</label>
     <input type="number" name="quantidade" id="quantidade" value="{{ material.quantidade }}" required>
 
+    <label for="unidade_medida">Unidade De Medida:</label>
+    <input type="text" name="unidade_medida" id="unidade_medida" value="{{ material.unidade_medida }}">
+
     <label for="lote">Lote:</label>
     <input type="text" name="lote" id="lote" value="{{ material.lote }}" required>
 
