--- a/src/templates/materiais.html
+++ b/src/templates/materiais.html
@@ -21,6 +21,7 @@
       <tr>
         <th>Nome</th>
         <th>Quantidade</th>
+        <th>Unidade de medida</th>
         <th>Lote</th>
         <th>Est. Mín. (Chuva)</th>
         <th>Est. Mín. (Seco)</th>
@@ -32,6 +33,7 @@
         <tr>
           <td>{{ m.nome }}</td>
           <td>{{ m.quantidade }}</td>
+          <td>{{ m.unidade_medida }}</td>
           <td>{{ m.lote }}</td>
           <td>{{ m.estoque_minimo_chuva }}</td>
           <td>{{ m.estoque_minimo_seco }}</td>
