--- a/src/templates/novo_material.html
+++ b/src/templates/novo_material.html
@@ -15,6 +15,9 @@
     <label for="quantidade">Quantidade:</label>
     <input type="number" name="quantidade" id="quantidade" required>
 
+    <label for="unidade_medida">Unidade de Medida</label>
+    <input type="text" name="unidade_medida" id="unidade_medida" required>
+
     <label for="lote">Lote:</label>
     <input type="number" name="lote" id="lote">
 
