--- a/src/templates/novo_material.html
+++ b/src/templates/novo_material.html
@@ -16,7 +16,7 @@
     <input type="number" name="quantidade" id="quantidade" required>
 
     <label for="unidade_medida">Unidade de Medida</label>
-    <input type="text" name="unidade_medida" id="unidade_medida" required>
+    <input type="text" name="unidade_medida" id="unidade_medida">
 
     <label for="lote">Lote:</label>
     <input type="number" name="lote" id="lote">
