--- a/src/templates/nova_movimentacao.html
+++ b/src/templates/nova_movimentacao.html
@@ -114,6 +114,7 @@
     <form id="form-material" class="form-modal">
       <input type="text" name="nome" placeholder="Nome" required>
       <input type="number" name="quantidade" placeholder="Quantidade" required>
+      <input type="text" name="unidade_medida" placeholder="Unidade de Medida">
       <input type="number" name="lote" placeholder="Lote">
       <input type="number" name="estoque_minimo_chuva" placeholder="Estoque Mínimo (Chuva)" required>
       <input type="number" name="estoque_minimo_seco" placeholder="Estoque Mínimo (Seco)" required>
