--- a/src/static/controle_estoque.css
+++ b/src/static/controle_estoque.css
@@ -180,6 +180,32 @@
   font-weight: bold;
 }
 
+
+.export-buttons {
+  margin-top: 10px;
+}
+
+.btn-export {
+  display: inline-block;
+  padding: 8px 15px;
+  margin-right: 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+.btn-export.pdf {
+  background-color: #ffa726;
+}
+
+.btn-export.excel {
+  background-color: #55d455;
+}
+
+.btn-export:hover {
+  opacity: 0.8;
+}
 @media (max-width: 768px) {
   .header-estoque {
     flex-direction: column;
