--- a/src/templates/nova_movimentacao.html
+++ b/src/templates/nova_movimentacao.html
@@ -201,7 +201,7 @@
     input.type = "number";
     input.name = "quantidade[]";
     input.min = "0.01";
-    input.step = "any"; // permite decimais
+    input.step = "any";
     input.placeholder = "Qtd";
     input.required = true;
 
